# hotel-manager

./: .gitignore  API_DOCUMENTATION.md  BACKEND_README.md  BACKEND_TEST.md  FEATURES_CHECKLIST.md  FINAL_HANDOFF_COMPLETE.md  FINAL_VERIFICATION_COMPLETE.md  FIXES_SUMMARY.md  FRONTEND_DEPENDENCIES.md  FRONTEND_HANDOFF.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  HANDOFF_SUMMARY.md  HANDOFF_VERIFICATION_COMPLETE.md  HISTORY_COMPLETE_FIX.md  HISTORY_CRITICAL_FIXES.md  HISTORY_FIXES_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IPC_COMMAND_VERIFICATION.md  IPC_CONTRACT.md  LOGO_IMPLEMENTATION_COMPLETE.md  LOGO_SOLUTION_COMPLETE.md  ONBOARDING_TEST.md  PASSWORD_RESET_TEST.md  PERFORMANCE_BENCHMARK.md  PHASE4_INTEGRATION.md  PHASE4_SUMMARY.md  QUICK_ACTION_GUIDE.md  QUICK_START.md  QUICK_TEST_GUIDE.md  README.md  START_HERE.md  SYSTEM_ANALYSIS.md  SYSTEM_REVIEW_SUMMARY.md  TESTING_CHECKLIST.md  TEST_PLAN.md  TEST_SUITE_GUIDE.md  THEME_IMPLEMENTATION_COMPLETE.md  THEME_IMPLEMENTATION_GUIDE.md  TWEAKS_IMPLEMENTATION_COMPLETE.md  TYPESCRIPT_ERRORS_FIXED.md  (+19 more)
backend/: package.json  server.js
backups/: hotel_backup_20250905_1301.db
db/: hotel.db
src/: App.css  (+3 more)
src-tauri/: .gitignore  Cargo.toml  debug_invoice.html  tauri.conf.json  test_db.rs
src-tauri/capabilities/: default.json
src-tauri/db/: hotel.db
src-tauri/src/: database.rs  database_reset.rs  db.rs  export.rs  lib.rs  lib_offline.rs  models.rs  offline_auth.rs  print_templates.rs  settings.rs  simple_commands.rs  store_profiles.rs  test.rs  validation.rs
src-tauri/src/commands/: export.rs  mod_commands.rs  reports.rs
(+98 files in other folders)
